include/psls.h


struct psls_control_type {
    bool f_indexing;
    int error;
    int out;
    int print_level;
    int preconditioner;
    int semi_bandwidth;
    int scaling;
    int ordering;
    int max_col;
    int icfs_vectors;
    int mi28_lsize;
    int mi28_rsize;
    real_wp_ min_diagonal;
    bool new_structure;
    bool get_semi_bandwidth;
    bool get_norm_residual;
    bool space_critical;
    bool deallocate_error_fatal;
    char definite_linear_solver[31];
    char prefix[31];
    struct sls_control_type sls_control;
    struct mi28_control mi28_control;
};
struct psls_time_type {
    real_sp_ total;
    real_sp_ assemble;
    real_sp_ analyse;
    real_sp_ factorize;
    real_sp_ solve;
    real_sp_ update;
    real_wp_ clock_total;
    real_wp_ clock_assemble;
    real_wp_ clock_analyse;
    real_wp_ clock_factorize;
    real_wp_ clock_solve;
    real_wp_ clock_update;
};
struct psls_inform_type {
    int status;
    int alloc_status;
    int analyse_status;
    int factorize_status;
    int solve_status;
    int factorization_integer;
    int factorization_real;
    int preconditioner;
    int semi_bandwidth;
    int reordered_semi_bandwidth;
    int out_of_range;
    int duplicates;
    int upper;
    int missing_diagonals;
    int semi_bandwidth_used;
    int neg1;
    int neg2;
    bool perturbed;
    real_wp_ fill_in_ratio;
    real_wp_ norm_residual;
    char bad_alloc[81];
    int mc61_info[10];
    real_wp_ mc61_rinfo[15];
    struct psls_time_type time;
    struct sls_inform_type sls_inform;
    struct mi28_info mi28_info;
};
void psls_initialize( void **data, 
                     struct psls_control_type *control,
                     int *status );
void psls_read_specfile( struct psls_control_type *control, 
                        const char specfile[] );
void psls_import( struct psls_control_type *control,
                  void **data,
                  int *status,
                  int n,
                  const char type[],
                  int ne,
                  const int row[],
                  const int col[],
                  const int ptr[] );
void psls_reset_control( struct psls_control_type *control,
                 void **data,
                 int *status );
void psls_form_preconditioner( void **data,
                               int *status,
                               int ne,
                               const real_wp_ val[] );
void psls_form_subset_preconditioner( void **data,
                                      int *status,
                                      int ne,
                                      const real_wp_ val[],
                                      int n_sub,
                                      const int sub[] );
void psls_update_preconditioner( void **data,
                                 int *status,
                                 int ne,
                                 const real_wp_ val[],
                                 int n_del,
                                 const int del[] );
void psls_apply_preconditioner( void **data,
                                int *status,
                                int n,
                                real_wp_ sol[] );
void psls_information( void **data,
                      struct psls_inform_type *inform,
                      int *status );
void psls_terminate( void **data, 
                    struct psls_control_type *control, 
                    struct psls_inform_type *inform );